# case

./: LICENSE  README.md  setup.cfg
src/case/: case.py
src/case.egg-info/: PKG-INFO  SOURCES.txt
