[metadata]
name = case
version = 0.0.1
author = bright_lego
description = A module to allow python to have a 'case' statement (otherwise known as 'switch')
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brightlego/case
project_urls =
    Bug Tracker = https://github.com/brightlego/case/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independant

[options]
package_dir =
    = src
packages = find:
python_requirements = >=3.6

[options.packages.find]
where = src
